--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,9 +128,9 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h3>This is your final call to action area. Shine like a star, make them want you, tell 'em to push that button!</h3>
-                    <p>We offer a <span>30 Day Money Back Guarantee</span>, so joining is <span class="risk-free">Risk-Free!</span></p>
-                    <a class="btn btn-primary btn-lg" href="#">Join us yesterday</a>
+                    <h3>Stay up to date with all of our posts! Latest reviews of SaaS and more on Jekyll and new themes!</h3>
+                    <p>Joining <span>is Free</span>, and you can cancel<span class="risk-free">at anytime!</span></p>
+                    <a class="btn btn-primary btn-lg" href="#">Join us today!</a>
                 </div>
                 <div class="col-md-4 text-right footersocial">
                     <h5>Connect with Us</h5>
