--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,8 +128,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h3>Stay up to date with all of our posts! Latest reviews of SaaS and more on Jekyll and new themes!</h3>
-                    <p>Joining <span>is Free</span>, and you can cancel<span class="risk-free">at anytime!</span></p>
+                    <h3>Stay up to date with all of our posts! Get the latest reviews of SaaS products, Jekyll themes and much more!</h3>
+                    <p>Joining <span>is Free</span>, and you can cancel<span class="risk-free"> at anytime!</span></p>
                     <a class="btn btn-primary btn-lg" href="#">Join us today!</a>
                 </div>
                 <div class="col-md-4 text-right footersocial">
