--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,12 +77,12 @@
                 </li> 
                 
                  <li class="nav-item">                
-                    <a target="_blank" class="nav-link" href="https://github.com/wowthemesnet/affiliates-jekyll-theme">Github</a>
+                    <a target="_blank" class="nav-link" href="https://modernwebbuilders.github.io">ModernWebBuilders</a>
                 </li> 
                 
                 
                 <li class="nav-item">                
-                    <a class="nav-link highlight" href="https://github.com/wowthemesnet/affiliates-jekyll-theme/archive/master.zip">Download Theme</a>
+                    <a class="nav-link highlight" href="https://staticwebexpert.github.io/jekyll/freewebsite/learn/freehosting/freedomain/2018/12/30/make-website.html">Build a Website</a>
                 </li> 
                 
             </ul>
