--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,13 +18,26 @@
             
         <div class="sidebar-section">
              <h5><span>Recommended</span></h5>
-           <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+           <!--<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({
           google_ad_client: "ca-pub-6690717938647903",
           enable_page_level_ads: true
      });
+</script>-->
+                
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- left_sidebar_recommended -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6690717938647903"
+     data-ad-slot="9997550427"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+                
             <!--    <a href="https://easydigitaldownloads.com/?ref=2135" title="Sell digital downloads with WordPress, for free"><img src="https://easydigitaldownloads.com/wp-content/uploads/2015/02/300x250-2.png" alt="Sell digital downloads with WordPress, for free" /></a>-->
         </div>
             
