--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,8 @@ post_class: post-template
                         {% assign sortedCategories = page.categories | sort %}
                         {% for category in sortedCategories %}
                         <li>
-                         <a href="{{ site.baseurl }}/category/{{ category | slugify }}/">{{ category }}</a>
+                         <!--<a href="{{ site.baseurl }}/category/{{ category | slugify }}/">{{ category }}</a>-->
+			<a href="{{ site.baseurl }}/blog/categories.html</a>	
                         </li>
                         {% endfor %}
                     </ul>
