--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ post_class: post-template
                         {% for category in sortedCategories %}
                         <li>
                          <!--<a href="{{ site.baseurl }}/category/{{ category | slugify }}/">{{ category }}</a>-->
-			<a href="{{ site.baseurl }}/blog/categories.html</a>	
+			<a href="{{ site.baseurl }}/blog/categories.html"/>{{category}}</a>	
                         </li>
                         {% endfor %}
                     </ul>
