--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,7 +131,7 @@
                 <div class="col-md-8">
                     <h3>Stay up to date with all of our posts! Get the latest reviews of SaaS products, Jekyll themes and much more!</h3>
                     <p>Our Site <span>is Free</span>, so learn and build<span class="risk-free"> your own website today!</span></p>
-                    <a class="btn btn-primary btn-lg" href="feed.xml">Get the Feed!</a>
+                    <a type="application/rss+xml" class="btn btn-primary btn-lg" href="feed.xml">Get the Feed!</a>
                 </div>
                 <div class="col-md-4 text-right footersocial">
                     <h5>Connect with Us</h5>
