--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -177,11 +177,11 @@
                 <div class="footer-widget">
                 <h5 class="title">Author</h5>
                 <ul>
-                <li><a href="https://staticwebexpert.github.io/about/">About Us</a></li>
+                <li><a href="https://staticwebexpert.github.io/about">About Us</a></li>
                 <li><a target="_blank" href="https://www.wowthemes.net/affiliate-area/">Affiliates</a></li>
                 <li><a href="https://www.wowthemes.net/terms-and-conditions/">License</a></li>
-                <li><a href="https://staticwebexpert.github.io/blog/">Blog</a></li>
-                <li><a href="https://staticwebexpert.github.io/contact/">Contact</a></li>
+                <li><a href="https://staticwebexpert.github.io/blog">Blog</a></li>
+                <li><a href="https://staticwebexpert.github.io/contact">Contact</a></li>
                 </ul>
                 </div>
                 </div>
