--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,7 +188,7 @@
 
                 <div class="col-sm-3">
                 <div class="footer-widget textwidget">
-                    <h5 class="title">Download</h5>
+                    <h5 class="title">10 Minute Website</h5>
                     <p>Download "Affiliates" theme and use it for your next Jekyll project. If you have a question, a bug report, or if you simply want to say hi, <a href="https://www.wowthemes.net/support/">contact us here</a>.</p> 
                     <a href="https://github.com/wowthemesnet/affiliates-jekyll-theme/archive/master.zip">Download Theme</a>                    
                 </div>
