--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -189,8 +189,8 @@
                 <div class="col-sm-3">
                 <div class="footer-widget textwidget">
                     <h5 class="title">10 Minute Website</h5>
-                    <p>Download "Affiliates" theme and use it for your next Jekyll project. If you have a question, a bug report, or if you simply want to say hi, <a href="https://www.wowthemes.net/support/">contact us here</a>.</p> 
-                    <a href="https://github.com/wowthemesnet/affiliates-jekyll-theme/archive/master.zip">Download Theme</a>                    
+                    <p><a href="/jekyll/tutorial/freehosting/freeurl/securewebsite/fastwebsite/reliablewebsite/tenminutewebsite/2018/12/30/learn-how-to-make-website-in-10-minutes.html">Learn how</a> to make a free, secure and fast website in 10 minutes. If you have a question, a bug report, or if you simply want to say hi, <a href="https://www.wowthemes.net/support/">contact us here</a>.</p> 
+                    <!--<a href="https://github.com/wowthemesnet/affiliates-jekyll-theme/archive/master.zip">Download Theme</a>-->                    
                 </div>
                 </div>
             </div>
